# spgit

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  EXAMPLES.md  INSTALL.md  LICENSE  MANIFEST.in  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SUMMARY.md  pyproject.toml  setup.py  verify.py
spgit/: PROJECT_MANIFEST.txt  __init__.py  __main__.py  cli.py
spgit/commands/: __init__.py  add.py  blame.py  branch.py  checkout.py  cherrypick.py  clone.py  commit.py  compare.py  config.py  diff.py  fetch.py  fork.py  init.py  log.py  merge.py  pull.py  push.py  rebase.py  reflog.py  remote.py  reset.py  revert.py  show.py  stash.py  status.py  tag.py
spgit/core/: __init__.py  objects.py  repository.py  spotify.py
spgit/utils/: __init__.py  colors.py  helpers.py
tests/: __init__.py  conftest.py  test_objects.py  test_repository.py  test_utils.py
